<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/login_sign_margin"
            android:layout_marginLeft="@dimen/login_sign_margin"
            android:layout_marginRight="@dimen/login_sign_margin">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:maxLines="1"
                android:inputType="text"
                android:hint="@string/username"/>


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_sign_margin"
            android:layout_marginLeft="@dimen/login_sign_margin"
            android:layout_marginRight="@dimen/login_sign_margin">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:hint="@string/password"/>


        </android.support.design.widget.TextInputLayout>
    </LinearLayout>



    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkbox_auto_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/remember_password"
        android:layout_marginTop="@dimen/login_sign_margin"
        android:layout_marginLeft="@dimen/login_sign_margin"
        android:layout_marginRight="@dimen/login_sign_margin"
        android:checked="true"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="@dimen/login_sign_margin"
        android:text="@string/login"
        android:textSize="20sp"
        android:background="@drawable/ripple_primary"/>

</LinearLayout>