<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/refresh_forum"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/tab_height_bottom"
        android:layout_gravity="top"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <com.example.pz.hupuexercise.widget.ForumRecyclerView
            android:id="@+id/recycler_forum_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
        </com.example.pz.hupuexercise.widget.ForumRecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height_bottom"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:id="@+id/layout_forum_NBA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_forum_NBA"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:src="@mipmap/icon_forum_nba"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/text_forum_NBA"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_marginBottom="5dp"
                android:text="@string/nba"
                android:textColor="@color/colorNotChecked"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_forum_CBA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_forum_CBA"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:src="@mipmap/icon_forum_cba"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/text_forum_CBA"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorNotChecked"
                android:text="@string/cba"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_forum_equipment"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_forum_equipment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:src="@mipmap/icon_forum_equipment"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/text_forum_equipment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorNotChecked"
                android:text="@string/equipment"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_forum_jrs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_forum_jrs"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:src="@mipmap/icon_forum_jrs"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/text_forum_jrs"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorNotChecked"
                android:text="@string/jrs"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout_forum_mine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/image_forum_mine"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:src="@mipmap/icon_forum_mine"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/text_forum_mine"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="4"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorNotChecked"
                android:text="@string/mine"
                android:gravity="center"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>